@@ -7,6 +7,7 @@ xx/xx/2011 - MythBox 1.0.2
     - Issue 145 - Fixed unicode error in Live TV window 
     - Issue 147 - Changes to the recording schedule do not take effect immediately
     - Issue 149 - Help text on Settings screen gets truncated based on the translation
+    - Added support for ScheduleType.NOT_RECORDING
     
 1/13/2011 - MythBox 1.0.1
 -----------------------------
